# OpenCV_image_comparator

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: opencv.cpp
app/src/main/java/com/google/zxing/client/android/: CameraActivity.java  CameraActivityHandler.java  DecodeHandler.java  DecodeThread.java
app/src/main/java/com/google/zxing/client/android/camera/: AutoFocusManager.java  CameraConfigurationManager.java  CameraManager.java  PreviewCallback.java
app/src/main/java/com/google/zxing/client/android/camera/open/: CameraFacing.java  OpenCamera.java  OpenCameraInterface.java
app/src/main/java/com/jsxfedu/sfyjs_android/base/: BaseActivityView.java  BaseAppCompatActivity.java
app/src/main/java/com/jsxfedu/sfyjs_android/util/: BitmapUtil.java  FileUtil.java  HardwareInfoUtil.java
app/src/main/java/io/weichao/opencv/: FirstActivity.java  MainActivity.java
app/src/main/java/io/weichao/opencv/util/: BitmapUtil.java  CircleUtil.java  CompareUtil.java  ContourUtil.java  CornerUtil.java  EdgeUtil.java  ExtractUtil.java  LineUtil.java  PointUtil.java  ProcessUtil.java  RotateUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_first.xml  activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
openCVLibrary340/src/main/: AndroidManifest.xml
openCVLibrary340/src/main/res/values/: attrs.xml
